# chimera-supervisor

./: .gitignore  README.rst  example.yaml  pyproject.toml
docs/: DESIGN.md  configuration.rst  deploy-fake-observatory.md
examples/t80s/: MIGRATION.md
examples/t80s/migrated/: manager_checkws.yaml  (+32 more)
src/chimera_supervisor/: notification.py  operator.py  telegrambot.py
supervisor/: .manager_OpenAndStartRobObs.yaml.swp  manager_OpenAndStartRobObs.yaml  manager_checktelescopeparked.yaml  manager_checkws.yaml  manager_cleanqueuebadweather.yaml  manager_closeatsunrise.yaml  manager_closeondew.yaml  manager_closeonwind.yaml  manager_closetelescope.yaml  manager_coolDome.yaml  manager_coolM1.yaml  manager_getAllSky.yaml  manager_getInternalImages.yaml  manager_getProgress.yaml  manager_lockall.yaml  manager_makequeue.yaml  manager_makeskyflat.yaml  manager_openatsunset.yaml  manager_opendomeflapatnightstart.yaml  manager_opentelescope.yaml  manager_operatorLock.yaml  manager_phometriclastnight.yaml  manager_powercut.yaml  manager_schedulerinerror.yaml  manager_sendImageBeforeSkyflat.yaml  manager_sendObsPlan.yaml  manager_stoprobobsendofnight.yaml  manager_stopshedendofnight.yaml  manager_test.yaml  manager_transpUnlock.yaml  manager_transplock.yaml  manager_unlockall.yaml  manager_unlockdew.yaml  supervisor_missing.yaml  update.yaml
tests/: fakes.py  test_actions.py  test_checklist.py  test_conditions.py  test_configure_scheduler.py  test_durations.py  test_engine.py  test_event_signatures.py  test_integration.py  test_legacy.py  test_operator.py  test_state_store.py
(+19 files in other folders)
